--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -4,37 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notflix</title>
+    {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'djangoflix/style.css' %}">
     <script src="https://kit.fontawesome.com/b00bdfc60f.js" crossorigin="anonymous"></script>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'notflix/style.css' %}">
-    <script src="{% static 'notflix/script.js' %}"></script>
+    <script src="{% static 'djangoflix/script.js' %}"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0">
+    <nav class="navbar navbar-expand-lg bg-body-secondary position-sticky top-0">
         <container class="container-fluid">
-            <a class="navbar-brand text-primary" href="/">Notflix</a>
-            <!-- route guarded nav links -->
+            <a class="navbar-brand text-primary" href="{% url 'djangoflix:home' %}">Notflix</a>
+            <!-- TODO: make these route guarded nav links -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav color-primary">
                     <li class="nav-item" id="navHome">
-                        <a class="nav-link" href="/home">Browse</a>
+                        <a class="nav-link" href="{% url 'djangoflix:browse' %}">Browse</a>
                     </li>
                     <li class="nav-item" id="navMovies">
-                        <a class="nav-link" href="/content/movies/all">Movies</a>
+                        <a class="nav-link" href="{% url 'djangoflix:movies' %}">Movies</a>
                     </li>
                     <li class="nav-item" id="navTV">
-                        <a class="nav-link" href="/content/tv/all">TV</a>
+                        <a class="nav-link" href="{% url 'djangoflix:tv' %}">TV</a>
                     </li>
                     <li class="nav-item" id="navSearch">
-                        <a class="nav-link" href="/content/search">Search</a>
+                        <a class="nav-link" href="{% url 'djangoflix:search' %}">Search</a>
                     </li>
-                    <li class="nav-item" id="navFavorites">
-                        <a class="nav-link" href="/users/{{ session['user_id'] }}/favorites">Favorites</a>
-                    </li>
+                  <!-- TODO: Add Favorites Nav Link -->
                     <li class="nav-item" id="nav2">
-                        <a class="nav-link" href="/users/logout">Logout</a>
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                 </ul>
             </div>
