Updates Login; Adds Registration & Logout

--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notflix</title>
+    <title>djaNgoflix</title>
     {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'djangoflix/images/favicon.png' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'djangoflix/style.css' %}">
@@ -14,8 +15,8 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-secondary position-sticky top-0">
         <container class="container-fluid">
-            <a class="navbar-brand text-primary" href="{% url 'djangoflix:home' %}">Notflix</a>
-            <!-- TODO: make these route guarded nav links -->
+            <a class="navbar-brand text-primary" href="{% url 'djangoflix:home' %}"><img src="{% static 'djangoflix/images/favicon.png' %}" height="40"></a>
+            {% if request.session.account %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav color-primary">
                     <li class="nav-item" id="navHome">
@@ -32,11 +33,11 @@
                     </li>
                   <!-- TODO: Add Favorites Nav Link -->
                     <li class="nav-item" id="nav2">
-                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
                     </li>
                 </ul>
             </div>
-            <!-- end route guarded nav links -->
+            {% endif %}
         </container>
     </nav>
     <main class="py-4 px-5 mx-auto">
