--- a/src/djangoflix/templates/registration/register.html
+++ b/src/djangoflix/templates/registration/register.html
@@ -27,9 +27,8 @@
             
                 {% endfor %}
         </div>
-        <span class="d-flex justify-content-end align-items-baseline">
-            <input type="submit" value="Sign Up" class="btn btn-success mt-2">
-        </span>
+        <p class="float-start mt-3 mb-0 fs-6"><i>Already signed up? </i><a href="{% url 'accounts:login' %}">Login</a></p>
+        <input type="submit" value="Sign Up" class="btn btn-success mt-2 float-end">
     </form>
 </container>
 {% endblock %}
