--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -43,6 +43,13 @@
                 </ul>
             </div>
             <p class="float-end mt-2"><a href="{% url 'accounts:logout' %}">Logout</a></p>
+            {% else %}
+            <div class="float-end d-flex justify-content-between gap-1 align-content-center">
+                <p class="mt-2"><a href="{% url 'accounts:login' %}">Login</a></p>
+                <p class="text-dark mt-2">or</p>
+                <p class="mt-2"><a href="{% url 'accounts:register' %}">Sign Up</a></p>
+
+            </div>
             {% endif %}
         </container>
     </nav>
