--- a/src/djangoflix/templates/djangoflix/profiles.html
+++ b/src/djangoflix/templates/djangoflix/profiles.html
@@ -14,15 +14,48 @@
     <div class="row text-center justify-content-center">
     {% for profile in profiles %}
         <div class="col d-flex flex-column">
-            <form action="djangoflix/profiles/{{ profile.id }}" method="POST">
+            <form action="{% url 'djangoflix:select_profile' id=profile.id %}" method="POST">
+                {% csrf_token %}
                 <button class="btn btn-outline-light rounded-circle" type="submit"><img src="{% static 'djangoflix/images/default.png' %}" height="60"></button>
             </form>
             <p>{{ profile.profile_name }}</p>
         </div>
         {% if forloop.last and forloop.counter < 5 %}
-        <div class="col align-content-center">
-            <button class="btn btn-lg btn-outline-light rounded-circle  px-4 py-3 mb-2"><i class="fa-solid fa-plus text-success"></i></button>
+        <div class="col align-content-center" id="addProfileBtn">
+            <button class="btn btn-lg btn-outline-light rounded-circle px-4 py-3 mb-2" onclick="showProfileForm()">
+                <i class="fa-solid fa-plus text-success"></i>
+            </button>
             <p class="text-success float-none">Add profile</p>
+        </div>
+        <div class="col align-content-center d-none" id="addProfileForm">
+            <form method="post" action="{% url 'djangoflix:profiles' %}">
+                {% csrf_token %}
+                <div class="d-flex flex-column gap-1 justify-content-start mx-auto fs-5">
+                {% if form.non_field_errors %}
+                    <span class="text-danger fs-6">{{ form.non_field_errors }}</span>
+                {% endif %}
+                    
+                {% for field in form.visible_fields %}
+                    {% if field.errors %}
+                        <ul class="text-danger">
+                        {% for error in field.errors %}
+                            <li class="text-danger"><p class="text-danger">{{ error }}</p></li>
+                        {% endfor %}
+                        </ul>
+                    {% endif %}
+                    
+                    {{ field.label_tag }} {{ field }}
+                    
+                    {% if field.help_text %}
+                        <i class="fs-6 lh-sm">{{ field.help_text|safe }}</i>
+                    {% endif %}
+                {% endfor %}
+                </div>
+                {% for field in form.hidden_fields %}
+                    {{ field }}
+                {% endfor %}
+                <input type="submit" value="Save" class="btn btn-success mt-2 float-end">
+            </form>
         </div>
         {% endif %}
     {% endfor %}
