--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -17,6 +17,12 @@
     }
 }
 
+.nonfield {
+    list-style-type: "!!! ";
+    margin: 0;
+    padding: 0 0 0 18px;
+}
+
 .sticky-table-header {
     position: sticky;
     top: 55px;
