Updates login/register/profile workflow for better exception handling and improved logic/responsibility management

--- a/src/djangoflix/templates/djangoflix/home.html
+++ b/src/djangoflix/templates/djangoflix/home.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<container>
-    <!-- Welcome message H1 -->
+<container class="container-fluid">
+    <h1>Welcome, {{ profile.profile_name }}</h1>
     <!-- Recently Watched -->
     <!-- Recommendations -->
 
