--- a/src/djangoflix/templates/djangoflix/landing.html
+++ b/src/djangoflix/templates/djangoflix/landing.html
@@ -3,8 +3,18 @@
 {% block content %}
 
 <container>
-    <!-- Welcome message H1 -->
-    <!-- CTA => Login or Sign Up -->
+    <main class="d-flex flex-column gap-4 justify-content-start align-items-center">
+    <h1 class="text-primary">Welcome to djaNgoflix!</h1>
+    <div class="d-flex flex-row gap-2 align-items-baseline">
+        <a href="{% url 'accounts:login' %}"><button class="btn bg-primary text-light">Login</button></a>
+        <p>to browse Movies and TV</p>
+    </div>
+    <div class="d-flex flex-row gap-2 align-items-baseline">
+        <p>Don't have an account yet?</p>
+        <a href="{% url 'accounts:register' %}"><button class="btn bg-success text-light">Sign Up</button></a>
+        <p>today!</p>
+    </div>
+</main>
 
 </container>
 
