--- a/src/djangoflix/templates/djangoflix/profiles.html
+++ b/src/djangoflix/templates/djangoflix/profiles.html
@@ -10,8 +10,7 @@
     <br>
     <h3>Who is watching djaNgoflix today?</h3>
     <hr>
-    
-    <div class="row text-center justify-content-center">
+    <div class="row">
     {% for profile in profiles %}
         <div class="col d-flex flex-column">
             <form action="{% url 'djangoflix:select_profile' id=profile.id %}" method="POST">
