--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -15,7 +15,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-secondary position-sticky top-0">
         <container class="container-fluid">
-            <a class="navbar-brand text-primary" href="{% url 'djangoflix:landing' %}"><img src="{% static 'djangoflix/images/favicon.png' %}" height="40"></a>
+            <a class="navbar-brand text-primary" href="{% url 'djangoflix:landing' %}" id="navbarBrand">
+                <img src="{% static 'djangoflix/images/favicon.png' %}" height="40">
+            </a>
             {% if request.session.profile %}
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav color-primary">
