Adds missing email to create_user in register; Reorders register to match login's if GET first

--- a/src/djangoflix/static/djangoflix/style.css
+++ b/src/djangoflix/static/djangoflix/style.css
@@ -25,7 +25,8 @@
 
 .sticky-table-header {
     position: sticky;
-    top: 55px;
+    /* navbar has a 66px height */
+    top: 66px;
 }
 
 .clickable:hover {
