--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -13,7 +13,7 @@
     <script src="{% static 'djangoflix/script.js' %}"></script>
 </head>
 <body>
-    <nav data-bs-theme="dark" class="navbar navbar-expand-lg bg-body-secondary position-sticky top-0">
+    <nav data-bs-theme="dark" class="navbar navbar-expand bg-body-secondary position-sticky top-0">
         <container class="container-fluid">
             <a class="navbar-brand text-primary" href="{% url 'djangoflix:landing' %}" id="navbarBrand">
                 <img src="{% static 'djangoflix/images/favicon.png' %}" height="40">
