Updates type hints for Account model attributes

--- a/src/djangoflix/templates/djangoflix/base.html
+++ b/src/djangoflix/templates/djangoflix/base.html
@@ -49,7 +49,7 @@
             {% else %}
             <div class="float-end d-flex justify-content-between gap-1 align-content-center">
                 <p class="mt-2"><a href="{% url 'accounts:login' %}">Login</a></p>
-                <p class="text-dark mt-2">or</p>
+                <p class="mt-2">or</p>
                 <p class="mt-2"><a href="{% url 'accounts:register' %}">Sign Up</a></p>
 
             </div>
